apps/healthchecks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthchecks
  namespace: healthchecks
  labels:
    app: healthchecks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthchecks
  template:
    metadata:
      labels:
        app: healthchecks
    spec:
      containers:
        - name: healthchecks
          image: healthchecks/healthchecks:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
