apps/healthchecks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthchecks
  namespace: healthchecks
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
  - host: hc.ugard.mywire.org
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: healthchecks
              port:
                number: 80
  tls:
  - hosts:
    - hc.ugard.mywire.org
    secretName: tls-healthchecks-ingress-http
